--- a/style.css
+++ b/style.css
@@ -521,7 +521,7 @@ main > header .site-width > *, article header > *, article .post-thumbnail > *, 
   margin-inline: auto;
   padding-inline: calc(var(--spacing) * 4);
 }
-a.post-thumbnail, .post-thumbnail, .post-thumbnail img, .entry-content p, figure.aligncenter, p img {
+a.post-thumbnail, .post-thumbnail, .post-thumbnail img, .entry-content p, .wp-block-image.aligncenter, p img {
   margin: calc(var(--spacing) * 8);
   margin-inline: auto;
 }
